Question page style fixes (#420)
* Add fieldset and legend to radio buttons.

This provides hints for screen readers that
the radio button is part of the same group.

* Baseline align radio buttons with text.

The radio buttons were a bit too high.

* Fix the alignment of grey boxes.

The question boxes had left and right margins
that was causing the content to be indented.
Remove the horizontal margins so that the
left of the box lines up with the headings.

* Add a component snapshot test.

--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -30,6 +30,7 @@ $font-family-sans-serif: "Source Sans Pro", sans-serif !default;
 @import "components/Header/index";
 @import "components/Footer/index";
 @import "components/TabbedContainer/index";
+@import "components/DisasterQuestion/index";
 
 h1,
 h2,
@@ -46,6 +47,10 @@ h2 {
 
 h3 {
   margin-bottom: 0.8rem;
+}
+
+legend {
+  font-size: inherit;
 }
 
 a {
